--- a/.github/workflows/java_workflow.yml
+++ b/.github/workflows/java_workflow.yml
@@ -7,18 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+  printing:
     steps:
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: 11
-          distribution: 'adopt'
-
-      - name: Check out code
-        uses: actions/checkout@v2
-
-      - name: Compile Java code
-        run: javac Main.java
-
-      - name: Run Java Program
-        run: java Main
+      - name : print Hello!
+        uses : echo "Hello, World!"
