--- a/.github/workflows/java_workflow.yml
+++ b/.github/workflows/java_workflow.yml
@@ -10,4 +10,4 @@ jobs:
   printing:
     steps:
       - name : print Hello!
-        uses : echo "Hello, World!"
+        run : echo "Hello, World!"
