--- a/.github/workflows/java_workflow.yml
+++ b/.github/workflows/java_workflow.yml
@@ -7,6 +7,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+
+
+      - name: ls command
+        run: |
+          ls -l
+          ls ../
+      - name: whoami command
+        run: whoami
+
+      - name: pwd where am i
+        run: pwd
+      - name: find Java
+        run: find / -name  "Main.java" 2>/dev/null
+
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -25,19 +40,6 @@ jobs:
       - name: print Hello!
         run: echo "Hello, World!"
 
-
-      - name: ls command
-        run: |
-          ls -l
-          ls ../
-      - name: whoami command
-        run: whoami
-
-      - name: pwd where am i
-        run: pwd
-      - name: find Java
-        run: find /
-
   printing:
     runs-on: ubuntu-latest
     steps:
@@ -55,4 +57,5 @@ jobs:
       - name : pwd where am i
         run : pwd
       - name : find Java
-        run : find /
+        run : find / -name  "Main.java" 2>/dev/null
+
