--- a/.github/workflows/java_workflow.yml
+++ b/.github/workflows/java_workflow.yml
@@ -1,61 +1,22 @@
 name: Java CI
 
-on:
-  push:
+on: [push]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-
-
-      - name: ls command
-        run: |
-          ls -l
-          ls ../
-      - name: whoami command
-        run: whoami
-
-      - name: pwd where am i
-        run: pwd
-      - name: find Java
-        run: find / -name  "Main.java" 2>/dev/null
-
+      - uses: actions/checkout@v2
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 11
-          distribution: 'adopt'
-
-      - name: Check out code
-        uses: actions/checkout@v2
+          java-version: '11'
 
       - name: Compile Java code
-        run: javac Main.java
+        run: javac HelloWorld.java
 
-      - name: Run Java Program
-        run: java Main
-
-      - name: print Hello!
-        run: echo "Hello, World!"
-
-  printing:
-    runs-on: ubuntu-latest
-    steps:
-      - name : print Hello!
-        run : echo "Hello, World!"
-
-
-      - name : ls command
-        run : |
-          ls -l
-          ls ../
-      - name : whoami command
-        run : whoami
-
-      - name : pwd where am i
-        run : pwd
-      - name : find Java
-        run : find / -name  "Main.java" 2>/dev/null
-
+      - name: Run Java code
+        run: java HelloWorld
