--- a/.github/workflows/java_workflow.yml
+++ b/.github/workflows/java_workflow.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+          distribution: 'adopt'
 
       - name: Compile Java code
         run: javac HelloWorld.java
