--- a/.github/workflows/java_workflow.yml
+++ b/.github/workflows/java_workflow.yml
@@ -17,7 +17,7 @@ jobs:
           distribution: 'adopt'
 
       - name: Compile Java code
-        run: javac HelloWorld.java
+        run: javac src/Main.java
 
       - name: Run Java code
-        run: java HelloWorld
+        run: java Main
